# WaveSimulation

./: CMakeLists.txt  README.md  WaveSimulation.sln  main.cpp
WaveSimulation/: Camera.cpp  Camera.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  WaveSimulation.vcxproj  WaveSimulation.vcxproj.filters  _Common.h
WaveSimulation/Shaders/: ComputeShaderForWave.glsl  FragmentShaderForObject.glsl  VertexShaderForObject.glsl
cmake/: add-libraries-linux.cmake  add-libraries-windows.cmake  target-link-libraries-linux.cmake  target-link-libraries-windows.cmake
include/: Camera.h  Light.h  Object.h  Renderer.h  Shader.h  _Common.h  base.h  camera.h  light.h  object.h  renderer.h  shader.h
shaders/: screen.frag  screen.vert  wave.comp  wave_normal.comp
source/: Camera.cpp  Light.cpp  Object.cpp  Renderer.cpp  Shader.cpp  camera.cpp  object.cpp  renderer.cpp  shader.cpp
